# os-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_cli.cpp
docs/: phase1_design.md
include/cli/: CLIInterface.h  CLIRenderer.h
include/core/: CPU.h  Process.h  Simulation.h
include/events/: SimulationEvent.h  SimulationObserver.h
include/metrics/: MetricsCollector.h
include/scheduler/: FCFSScheduler.h  MLFQScheduler.h  RoundRobin.h  SJFScheduler.h  Scheduler.h
src/cli/: CLIInterface.cpp  CLIRenderer.cpp
src/core/: CPU.cpp  Process.cpp  Simulation.cpp
src/metrics/: MetricsCollector.cpp
src/scheduler/: FCFSScheduler.cpp  MLFQScheduler.cpp  RoundRobin.cpp  SJFScheduler.cpp
